<resources>
    <string name="app_name">FireBaseTask</string>
    <string name="age">Age</string>
    <string name="savedata">SaveData</string>
    <string name="button">Button</string>
    <string name="buttons">Button</string>
    <string name="buttonss">Button</string>
    <string name="this_is_email_name">This is Email Name</string>
    <string name="this_is_email_namee">This is Email Name</string>
    <string name="this_is_email_nameee">This is Email Name</string>
    <string name="this_is_course_nameee">This is Course Name</string>
    <string name="this_is_demo_namecc">This is Demo Name</string>
    <string name="retrivedata">RetriveData</string>
    <string name="enter_student_id">Enter Student ID</string>
    <string name="buttonsss">Button</string>
    <string name="update_data">Update Data</string>
    <string name="main_menu">Main Menu</string>
    <string name="insert_data">Insert Data</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_cgpa">Enter CGPA</string>
    <string name="enter_dept">Enter Dept</string>
    <string name="enter_name">Enter Name</string>
    <string name="update_datas">Update Data</string>
    <string name="sample">sample</string>
    <string name="samples">sample</string>
    <string name="regno">RegNo</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="dept">Dept</string>
    <string name="cgpa">Cgpa</string>
    <string name="retrieve_data">Retrieve Data</string>
    <string name="first_name">First name:</string>
    <string name="textview">TextView</string>
    <string name="last_name">Last name:</string>
    <string name="textviews">TextView</string>
    <string name="ages">Age</string>
    <string name="textviewc">TextView</string>
</resources>